# burning_forest

./: .gitignore  CMakeLists.txt  main.cpp
headers/: App.h  Automaton.h  AutomatonView.h  Canvas.h  Cell.h  Rules.h  Table.h
src/: App.cpp  Automaton.cpp  AutomatonView.cpp  Canvas.cpp  Rules.cpp  Table.cpp
usables/containers/: array.h  cyclic_array.h
